--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "node deploy.js"
+    "deploy": "node deploy.js",
+    "deploy:watch": "watch 'npm run deploy' ."
   },
   "repository": {
     "type": "git",
@@ -13,5 +14,8 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/BTBTravis/3d_room_explorer#readme"
+  "homepage": "https://bitbucket.org/BTBTravis/3d_room_explorer#readme",
+  "devDependencies": {
+    "watch": "latest"
+  }
 }
