--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/BTBTravis/3d_room_explorer#readme",
   "devDependencies": {
+    "colors": "^1.1.2",
     "watch": "latest"
   }
 }
