--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "exp_2",
+  "name": "byte_3d_building_explorer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Library Used for 3d building widgets ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,11 +12,21 @@
     "type": "git",
     "url": "git+ssh://git@bitbucket.org/BTBTravis/3d_room_explorer.git"
   },
-  "author": "",
+  "author": "Travis Shears",
   "license": "ISC",
   "homepage": "https://bitbucket.org/BTBTravis/3d_room_explorer#readme",
   "devDependencies": {
     "colors": "^1.1.2",
     "watch": "latest"
-  }
+  },
+  "keywords": [
+    "three.js",
+    "3d",
+    "building",
+    "explorer",
+    "html",
+    "javascript",
+    "sketchup",
+    "blender"
+  ]
 }
