--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server --port 3000 --hot --host 192.168.10.172",
+    "serve": "webpack-dev-server --port 3000 --hot --host localhost",
     "deploy": "node deploy.js",
     "deploy:watch": "watch 'npm run deploy' ."
   },
